[ci skip] Crowdin translation bot: New translations for Norwegian

--- a/app/src/main/res/values-no/strings.xml
+++ b/app/src/main/res/values-no/strings.xml
@@ -39,7 +39,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share">Del</string>
     <string name="search">Søk</string>
     <string name="display_converted_markup">Vis konvertert markup</string>
-    <string name="editor">Redaktør</string>
+    <string name="editor">Endre</string>
     <string name="folders">Mapper</string>
     <string name="files">Filer</string>
     <string name="document">Dokument</string>
@@ -209,21 +209,21 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="edit_text_in_center_of_screen">Rediger tekst i midten av skjermen</string>
     <string name="clipboard">Utklippstavle</string>
     <string name="select_existing_document">Velg eksisterende dokument</string>
-    <string name="open_source_licenses">Åpen kildekode-lisenser</string>
+    <string name="open_source_licenses">Åpen kilde-lisenser</string>
     <string name="rate_this_app">Vurder denne appen</string>
     <string name="translate">Oversett</string>
     <string name="more_info_and_help">Mer info om dette</string>
     <string name="report_bugs">Rapporter feil</string>
     <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">Mer info om donering til utvikleren eller bidra til dette prosjektet.</string>
-    <string name="join_community">Delta i samfunnet</string>
+    <string name="join_community">Bli med i fellesskapet</string>
     <string name="bug_reports_suggest_improvements">Gi tilbakemeldinger, rapporter feil eller foreslå forbedringer</string>
-    <string name="help_translating_this_app">Oversett dette programmet til andre språk</string>
+    <string name="help_translating_this_app">Hjelp oss oversett denne appen til flere språk</string>
     <string name="source_code">Kildekode</string>
     <string name="project_license">Prosjektets lisens</string>
     <string name="project_contribution_info">Prosjekt bidrag info</string>
     <string name="more_info_on_how_to_contribute_to_this_project">Mer info om hvordan du kan bidra til dette prosjektet</string>
     <string name="contribute_code_to_this_project_anybody_welcome">Bidra med kode til prosjektet. Alle er velkomne, inkludert nybegynnere</string>
-    <string name="project_team">Prosjekt team</string>
+    <string name="project_team">Prosjekt laget</string>
     <string name="contributors_public_add_yourself_description">Vis info om bidragsytere. De kan valgfritt bidra med info til visning her etter bidrag.</string>
     <string name="descending">synkende</string>
     <string name="ascending">stigende</string>
@@ -265,7 +265,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="folder_is_created_without_extension">- Mappen ble opprettet uten filtype</string>
     <string name="keep_existing_file">- Filer og mapper er ikke overskrevet</string>
     <string name="multiple_windows">Flere vinduer</string>
-    <string name="font">Font</string>
+    <string name="font">Skrifttype</string>
     <string name="open_new_documents_always_in_new_window">Åpne dokumenter alltid i separate vinduer. Bytt ved å bruke enhetens \"nylige\" nøkkel.</string>
     <string name="enter_or_select_format">Angi eller velg format</string>
     <string name="pick_date">Velg dato</string>
@@ -382,6 +382,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="file_description_format">Format for filbeskrivelse</string>
     <string name="file_description_format_dialog">Formatet for beskrivelsen under hver fil i filnettleser. Følg reglene for Android, SimpleDateFormat med tillegg av FS for å vise filstørrelse. La være blank for å bruke standardformat for din lokalitet.\n\nEksempel input:\nFS yyyy MMM dd ht:mm:ss aa\nUtdataformat:\n30 KB 2020 Mar 20 11:24:52 PM</string>
     <string name="loading_default_value">Laster inn standardverdi</string>
+    <string name="file_settings">Fil innstillinger</string>
     <string name="search_and_replace">Søk / erstatt</string>
     <string name="search_for">Søk etter</string>
     <string name="replace_with">Erstatt med</string>
