--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -348,6 +348,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_1">Cabeçalho 1</string>
     <string name="heading_2">Cabeçalho 2</string>
     <string name="heading_3">Cabeçalho 3</string>
+    <string name="heading_4">Cabeçalho 4</string>
+    <string name="heading_5">Cabeçalho 5</string>
     <string name="bold">Negrito</string>
     <string name="italic">Itálico</string>
     <string name="strikeout">Rasurado</string>
