--- a/app/src/main/res/values-sc/strings.xml
+++ b/app/src/main/res/values-sc/strings.xml
@@ -348,6 +348,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_1">Tìtulu 1</string>
     <string name="heading_2">Tìtulu 2</string>
     <string name="heading_3">Tìtulu 3</string>
+    <string name="heading_4">Tìtulu 4</string>
+    <string name="heading_5">Tìtulu 5</string>
     <string name="bold">Grussitu</string>
     <string name="italic">Cursivu</string>
     <string name="strikeout">Istangadu</string>
