[ci skip] Crowdin translation bot: New translations for Hungarian

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -339,6 +339,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_1">Címsor 1</string>
     <string name="heading_2">Címsor 2</string>
     <string name="heading_3">Címsor 3</string>
+    <string name="heading_4">Címsor 4</string>
+    <string name="heading_5">Címsor 5</string>
     <string name="bold">Félkövér</string>
     <string name="italic">Dőlt</string>
     <string name="strikeout">Áthúzott</string>
